docs: updated syntax

--- a/2-frontend.html
+++ b/2-frontend.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Front-end</title>
 </head>
 <body>
     <h1>Front-end</h1>
@@ -34,7 +34,7 @@
     <p>
         <p>Frameworks de CSS:</p>
         <p>
-            Son ciertos fragmentos de CSS ya construidos, listos para que los agreguen a los proyectos, y las personas puedan hacer las cosas de manera más rápida.
+            Son ciertos fragmentos de CSS ya construidos, listos para que los agreguen a los proyectos y las personas puedan hacer las cosas de manera más rápida.
             <br>
             Los Frameworks otorgan cierto CSS construído para recortar los tiempos de creación de un producto.
         </p>
@@ -47,13 +47,41 @@
         </ul>
     </p>
     <p>
-        <p></p>
+        <p>Frameworks y librerías de JS:</p>
+        <p>
+            Después de que un front-end ya entiende bien el manejo de JavaScript,
+            podrá elegir qué Framework o librería va a usar para poder desarrollar productos que puedan escalar más rápido y
+            que puedan tener una interacción muchimo mayor.
+            <br>
+            Dependiendo del tipo de producto que se quiera construir, los front-ends eligen 1 o más librerías y frameworks.
+        </p>
+        <ul>
+            <li>React</li>
+            <li>Vue.js</li>
+            <li>Node.js</li>
+            <li>MongoDB</li>
+            <li>expressJS</li>
+            <li>((Stack M.E.R.N.))</li>
+        </ul>
     </p>
-
-
-
-
-
+    <p>
+        <p>Procesadores de CSS:</p>
+        <p>
+            Es una forma diferente de hacer CSS, tiene reglas distintas.
+            <br>
+            Algunos desarrolladores dicen que es como manejar CSS con super-poderes.
+            <br>
+            No son muy necesarios, ya que CSS ha estado evolucionando hasta igualar las funcionalidades de los Preprocesadores.
+            <br>
+            Pero es importante, ya que son muy demandados en las vacantes de trabajos en Front-end.
+        </p>
+        <ul>
+            <li>SASS (primer más demandado)</li>
+            <li>Stylus (segundo más demandado)</li>
+            <li>{less} (tercer más demandado)</li>
+        </ul>
+    </p>
+<br>
     <p>
 Front-end
 (Cliente)
@@ -76,7 +104,7 @@ Tecnlogias que trabaja un Front-end:
         Frameworks y librerías de JS:
             Después de que un front-end ya entiende bien el manejo de JavaScript,
             podrá elegir qué Framework o librería va a usar para poder desarrollar productos que puedan escalar más rápido y
-            que puedan tener una interacción muchimo mayor.
+            que puedan tener una interacción mucho mayor.
             Dependiendo del tipo de producto que se quiera construir, los front-ends eligen 1 o más librerías y frameworks.
             - React
             - Vue.js
