docs: added frontend info

--- a/2-frontend.html
+++ b/2-frontend.html
@@ -11,8 +11,18 @@
     <h3>(Cliente)</h3>
     <p>
         Es el desarrollador que maneja las cosas del lado del cliente.
-        </br>
+        <br>
         A los Navegadores se les conoce como el <b>"Cliente"</b>.
+        <br>
+        <p>
+            Frontend es la parte de un programa o dispositivo a la que un usuario puede acceder directamente.
+            <br>
+            Son todas las tecnologías de diseño y desarrollo web que corren en el navegador y que se encargan de la interactividad con los usuarios.
+            <br>
+            Un programador Frontend debe saber de código que entienda el navegador (HTML, CSS y JavaScript) para poder usar algunos frameworks o librerías que expanden sus capacidades para crear cualquier tipo de interfaces de usuarios. React, Redux, Angular, Bootstrap, Foundation, LESS, Sass, Stylus y PostCSS son algunos de ellos.
+        </p>
+
+
     </p>
 </br>
     <h3>Tecnologías que trabaja un Front-end</h3>
