docs: added frontend and backend info

--- a/1-intro.html
+++ b/1-intro.html
@@ -55,5 +55,15 @@
             </li>
         </ul>
     </p>
+    <br>
+    <p>
+        <b>Frontend:</b>
+        <br>
+        Trabaja del lado del cliente. (Quiere decir, del lado del Navegador)
+        <br>
+        <b>Backend:</b>
+        <br>
+        Trabaja del lado del servidor. Trabaja el lado de la lógica, cuando en el lado del Navegador/Cliente realice una petición al Backend.
+    </p>
 </body>
 </html>
