docs: fixing file

--- a/1-intro.html
+++ b/1-intro.html
@@ -63,7 +63,7 @@
         <br>
         <b>Backend:</b>
         <br>
-        Trabaja del lado del servidor. Trabaja el lado de la lógica, cuando en el lado del Navegador/Cliente realice una petición al Backend.
+        Trabaja del lado del servidor. Trabaja el lado de la lógica, cuando en el lado del Navegador/Cliente se realice una petición al Backend.
     </p>
 </body>
 </html>
