docs: updated title, AngularJS added to list

--- a/2-frontend.html
+++ b/2-frontend.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Frontend</title>
+    <title>Perfil: Frontend</title>
 </head>
 <body>
     <h1>Perfil del "Frontend"</h1>
@@ -62,6 +62,7 @@
             <li>Vue.js</li>
             <li>Node.js</li>
             <li>MongoDB</li>
+            <li>AngularJS</li>
             <li>expressJS</li>
             <li>((Stack M.E.R.N.))</li>
         </ul>
