file updated, images section added

--- a/3-backend-devops-deploy.html
+++ b/3-backend-devops-deploy.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Perfil del Backend</title>
+    <title>Perfil: Backend</title>
 </head>
 <body>
     <header>
-        <h1>Perfil del Backend</h1>
+        <h1>Perfil del "Backend"</h1>
         <h3>(Servidor)</h3>
-        <p></p>
     </header>
     <div>
         <p>
@@ -19,6 +18,8 @@
         </p>
         <p>
             Una característica que lo diferencia del Frontend es que <b>no tiene estándares</b>, puesto que tiene varios lenguajes de programación con los que debe trabajar.
+            <br>
+            Para trabajar en Backend se pueden usar diferentes programas o diferentes lenguajes de programacion, no es específicamente uno solo, sino, hay varias tecnologías que son útiles para el desarrollo en el lado del Backend.
             <h3>Tecnologías</h3> (Lenguajes de Programacion)
             <br>
             <ul>
@@ -41,7 +42,7 @@
             (Recordemos que: Los frameworks nos ayudan a realizar ciertas cosas muy específicas y a construir aplicaciones como más robustas, de manera más rápida)
         </p>
         <p>
-            Un Backend también tiene que ver dónde va a subir su aplicación, o en dónde va a generar el <b>deploy</b> de su aplicación, esto tiene que ver con la Nube.
+            Un Backend también tiene que ver a dónde va a subir su aplicación, o en dónde va a generar el <b>deploy</b> de su aplicación, esto tiene que ver con la Nube.
             <br>
             De aquí sale otro perfil, que se le conoce como <b>DevOps</b>, que son personas que se especializan ya en trabajar con estos servicios de <b>infraestructura</b> en la Nube.
             <br>
@@ -80,6 +81,41 @@
                 Se necesita aprender a utilizarlas, para implementarlas en el stack(Backend).
             </p>
         </p>
+    </div>
+    <br/>
+    <div>
+        <h3>Imágenes:</h3>
+        <ul>
+            <li>
+                Apuntes
+                <br>
+                <img src="https://static.platzi.com/media/user_upload/BACK-END-286e8b77-8abe-413c-9f3e-5b502d655fb1.jpg">
+            </li>
+            <br/>
+            <li>
+                <a href="https://codearmy.co/el-camino-del-desarrollador-web-en-2018-64efc5b68853">El camino para convertirte en Desarrollador Web este 2018</a>
+                <br/>
+                <img src="https://miro.medium.com/max/1050/1*R6Gkt8tZZ4M9vL1XPS4S2g.png">
+            </li>
+            <br/>
+            <li>
+                Estructura
+                <br/>
+                <img src="https://thumbs.gfycat.com/GrossSphericalFulmar-size_restricted.gif">
+            </li>
+            <br/>
+            <li>
+                Lenguajes
+                <br/>
+                <img src="https://static.platzi.com/media/user_upload/1590690720-frontend-and-backend-frameworks-58d101ae-04f5-4de2-ae3f-7490e8b4e0ee.jpg">
+            </li>
+            <br/>
+            <li>
+                Diferencias entre <b>framework</b> y <b>librería</b>:
+                <br/>
+                <img src="https://edteam-media.s3.amazonaws.com/community/original/60bd8930-820e-45b7-9b04-71435088cdfb.jpg">
+            </li>
+        </ul>
     </div>
 </body>
 </html>
