docs: more info added

--- a/4-fullstack.html
+++ b/4-fullstack.html
@@ -10,7 +10,7 @@
     <header>
         <h1>Perfil del "FullStack"</h1>
         <p>
-            Es la fusión de todas las cosas y gran parte de las tecnologías que maneja un Front, y de todas las cosas y gran parte de las tecnologías que maneja un Backend
+            Es la fusión de todas las cosas y gran parte de las tecnologías que maneja un Front, y de todas las cosas y gran parte de las tecnologías que maneja un Backend.
         </p>
         <ul>
             <li>
@@ -25,15 +25,28 @@
     </header>
     <div>
         <p>
-            - Un <i>stack</i> (en inglés: conjunto o montón) se refiere al grupo de tecnologías que son necesarias para componer un sitio web en todos los aspectos, <b>desde la base de datos</b>, <b>pasando por el manejo lógico</b>, <b>hasta llegar a la interfaz visual</b>.
+            - Un <i>stack</i> (en inglés: pila o montón) se refiere al grupo de tecnologías que son necesarias para componer un sitio web en todos los aspectos, <b>desde la base de datos</b>, <b>pasando por el manejo lógico</b>, <b>hasta llegar a la interfaz visual</b>.
             <br/>
-            - Un desarrollador Full Stack, en teoría, es capaz de manejar el conjunto completo tecnologías que son necesarias para construir un sitio o aplicación web, tanto como para el lado del Frontend, como para el del Backend, además de tener el rol básico del DevOps y poder manejar su base de datos.
+            - Un desarrollador Full Stack, en teoría, es capaz de manejar la pila completa de tecnologías que son necesarias para construir un sitio o aplicación web, tanto como para el lado del Frontend, como para el del Backend, además de tener el rol básico del DevOps y poder manejar su base de datos.
         </p>
     </div>
     <div>
         <h3>Lo que hace un developer FullStack:</h3>
         <p>
-            Un desarrollador Full Stack entiende muy bien cómo funciona un producto o aplicación web, de principio a fin, desde su estructura de diseño en <b>MockUp</b>, pasando por la ejecución del <b>Deploy</b>, hasta llegar al envío de archivos a <b>producción</b>.
+            Un desarrollador Full Stack entiende muy bien cómo funciona un producto o aplicación web, de principio a fin, desde su estructura de diseño en <b>MockUp</b> (de las ideas de diseños que nos pasan los diseñadores), pasando por la ejecución del <b>Deploy</b>, hasta llegar a enviar la aplicación a <b>producción</b>.
+            Puede entender y manipular cómo se implementa su base de datos, como se modifica la base de datos. Puede tomar decisiones sobre el uso de ciertos Frameworks o tecnologías específicas para la base de datos, el Backend, y el Frontend.
+        </p>
+    </div>
+    <div>
+        <p>
+            <b>Mitos:</b>
+            <br/>
+            Un Full Stack no es una persona que maneja al 100% todas las tecnologías, es más, no es sano; la parte del <b>desarrollo web va evolucionando de manera muy rápida</b>, cada <b>2</b> o <b>3 meses</b> tenemos algo nuevo, y es casi imposible asegurar aprender y dominar esa tecnología nueva, y agregarla a nuestros skills.
+        </p>
+        <p>
+            Un Full Stack puede entender todo el uso y manejo de la gran infinidad de opciones para el desarrollo, de principio a fin, de una aplicación web, pero tiene un área de especialidad, y eso es lo más importante.
+            <br>
+            Ya sea en Front o en Backend, tener un área de especialidad es muy importante para el rol de Full Stack, ya que agregamos valor específico a un área o materia.
         </p>
     </div>
 </body>
