docs: Full Stack tree added

--- a/4-fullstack.html
+++ b/4-fullstack.html
@@ -41,13 +41,192 @@
         <p>
             <b>Mitos:</b>
             <br/>
-            Un Full Stack no es una persona que maneja al 100% todas las tecnologías, es más, no es sano; la parte del <b>desarrollo web va evolucionando de manera muy rápida</b>, cada <b>2</b> o <b>3 meses</b> tenemos algo nuevo, y es casi imposible asegurar aprender y dominar esa tecnología nueva, y agregarla a nuestros skills.
-        </p>
-        <p>
-            Un Full Stack puede entender todo el uso y manejo de la gran infinidad de opciones para el desarrollo, de principio a fin, de una aplicación web, pero tiene un área de especialidad, y eso es lo más importante.
-            <br>
-            Ya sea en Front o en Backend, tener un área de especialidad es muy importante para el rol de Full Stack, ya que agregamos valor específico a un área o materia.
+            Un Full Stack <b>no</b> es una persona que maneja al 100% todas las tecnologías, es más, no es sano; la parte del <b>desarrollo web va evolucionando de manera muy rápida</b>, cada <b>2</b> o <b>3 meses</b> tenemos algo nuevo, y es casi imposible asegurar aprender y dominar esa tecnología nueva, y agregarla a nuestros skills.
         </p>
     </div>
+    <br/>
+    <div>
+        <p><b>Nota:</b>
+            <br/>
+            - Un <b>Full Stack</b> puede <b>entender</b> todo el <b>uso</b> y <b>manejo</b> de la <b>gran cantidad</b> de <b>tecnologías</b> para el <b>desarrollo</b>, de principio a fin, de una <b>aplicación web</b>, pero <b>tiene un área de especialidad</b>, y eso <b>es lo más importante</b>.
+            <br>
+            - Ya sea en <b>Front</b> o en <b>Backend</b>, <b>tener un área de especialidad es muy importante para el rol de Full Stack</b>, ya que <b>agregamos valor</b> específico a un <b>área</b> o <b>materia</b>.
+        </p>
+    </div>
+    <br/>
+    <section>
+        <h3>FULL STACK DEVELOPER: Skills Breakdown</h3>
+        <article>
+            <h4>Rol del Frontend</h4>
+            <div>
+                <p>
+                    <b>Basics:</b>
+                    <br/>
+                    <ul>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>JavaScript</li>
+                    </ul>
+                </p>
+            </div>
+            <div>
+                <p>
+                    <b>Frameworks</b>
+                    <br/>
+                    <ul>
+                        <li>React</li>
+                        <li>Vue</li>
+                        <li>Angular</li>
+                        <li>Webpack</li>
+                        <li>entre otros...</li>
+                    </ul>
+                </p>
+            </div>
+            <div>
+                <p>
+                    <b>Styles</b>
+                    <br/>
+                    <ul>
+                        <li>Bootstrap</li>
+                        <li>Material UI</li>
+                    </ul>
+                </p>
+            </div>
+        </article>
+        <br/>
+        <article>
+            <h4>Rol del Backend</h4>
+            <div>
+                <p>
+                    <b>Technology</b>
+                    <ul>
+                        <li>PHP</li>
+                        <li>NodeJS</li>
+                        <li>Rubi on Rails</li>
+                        <li>Spring (Java)</li>
+                        <li>ASP.NET</li>
+                        <li>Redis</li>
+                    </ul>
+                </p>
+            </div>
+        </article>
+        <br/>
+        <article>
+            <h4>Rol del Database</h4>
+            <div>
+                <p>
+                    <b>RDBMS: Sistema de gestión de bases de datos relacionales</b>
+                    <ul>
+                        <li>MSSQL</li>
+                        <li>MySQL</li>
+                        <li>Postgres</li>
+                    </ul>
+                </p>
+            </div>
+            <div>
+                <p>
+                    <b>NoSQL</b>
+                    <ul>
+                        <li>MongoDB</li>
+                        <li>Casandra</li>
+                        <li>CouchDB</li>
+                        <li>Elasticsearch</li>
+                    </ul>
+                </p>
+            </div>
+            <div>
+                <p>
+                    <b>Graph</b>
+                    <ul>
+                        <li>Neo4j</li>
+                        <li>ArangoDB</li>
+                    </ul>
+                </p>
+            </div>
+            <div>
+                <p>
+                    <b>Message Queues</b>
+                    <ul>
+                        <li>Kafka</li>
+                        <li>SQS</li>
+                        <li>ZeroMQ</li>
+                        <li>RabbitMQ</li>
+                    </ul>
+                </p>
+            </div>
+        </article>
+        <br/>
+        <article>
+            <h3>Rol del DevOps</h3>
+            <div>
+                <p>
+                    <b>Infraestructura</b>
+                    <ul>
+                        <li>NGINX</li>
+                        <li>AWS: Amazon Web Services</li>
+                        <li>Microsoft Azure</li>
+                        <li>ELK</li>
+                    </ul>
+                </p>
+            </div>
+            <div>
+                <p>
+                    <b>Automatización</b>
+                    <ul>
+                        <li>Ansible</li>
+                        <li>Chef</li>
+                        <li><b>Jenkins</b></li>
+                    </ul>
+                </p>
+            </div>
+            <div>
+                <p>
+                    <b>Virtualización</b>
+                    <ul>
+                        <li>Docker</li>
+                        <li>Bladecenter</li>
+                        <li>Kubernetes</li>
+                        <li>Vagrant</li>
+                        <li>VMWare</li>
+                    </ul>
+                </p>
+            </div>
+        </article>
+        <article>
+            <h3>Rol del Mobile App</h3>
+            <div>
+                <p>
+                    <b>Android</b>
+                    <ul>
+                        <li>Kotlin</li>
+                        <li>Flutter</li>
+                        <li>Java</li>
+                        <li>SDK</li>
+                    </ul>
+                </p>
+            </div>
+            <div>
+                <p>
+                    <b>iOS</b>
+                    <ul>
+                        <li>Swift</li>
+                        <li>Objective-C</li>
+                    </ul>
+                </p>
+            </div>
+            <div>
+                <p>
+                    <b>Cross Platform</b>
+                    <ul>
+                        <li>React Native</li>
+                        <li>Ionic</li>
+                        <li>PWA</li>
+                        <li>Xamarin</li>
+                        <li>Unity</li>
+                    </ul>
+                </p>
+            </div>
+        </article>
+    </section>
 </body>
 </html>
