--- a/3-backend-devops-deploy.html
+++ b/3-backend-devops-deploy.html
@@ -64,7 +64,7 @@
                 <br>
                 Deploy es un término famoso entre los desarrolladores web. <b>Puede significar muchas cosas, dependiendo del ambiente y de la tecnología usada.</b>
                 <br>
-                - Sin embargo, <b>los significados que</b> más se refieren a la práctica y <b>pueden resumir su función, son</b>: <b><i>implantar, colocar en posición, habilitar para el uso o, simplemente, publicar.</i></b>
+                - Sin embargo, <b>los significados que</b> más se refieren a la práctica y que <b>pueden resumir su función, son</b>: <b><i>implantar, colocar en posición, habilitar para el uso o, simplemente, publicar.</i></b>
             </p>
             <p>
                 Por último, entramos en <b>bases de datos</b>, que <b>son las encargadas de almacenar toda la información del proyecto.</b>
