docs: file updated, info and images section added

--- a/4-fullstack.html
+++ b/4-fullstack.html
@@ -39,7 +39,7 @@
     </div>
     <div>
         <p>
-            <b>Mitos:</b>
+            <b>IMPORTANTE:</b>
             <br/>
             Un Full Stack <b>no</b> es una persona que maneja al 100% todas las tecnologías, es más, no es sano; la parte del <b>desarrollo web va evolucionando de manera muy rápida</b>, cada <b>2</b> o <b>3 meses</b> tenemos algo nuevo, y es casi imposible asegurar aprender y dominar esa tecnología nueva, y agregarla a nuestros skills.
         </p>
@@ -55,7 +55,7 @@
     </div>
     <br/>
     <section>
-        <h3>FULL STACK DEVELOPER: Skills Breakdown</h3>
+        <h3>FULL STACK DEVELOPER: Skills Breakdown / Desglose de Habilidades</h3>
         <article>
             <h4>Rol del Frontend</h4>
             <div>
@@ -192,6 +192,7 @@
                 </p>
             </div>
         </article>
+        <br/>
         <article>
             <h3>Rol del Mobile App</h3>
             <div>
@@ -226,6 +227,62 @@
                     </ul>
                 </p>
             </div>
+        </article>
+    </section>
+    <br/>
+    <section>
+        <h3>¿Cómo ser un desarrollador Full Stack?</h3>
+        <p>
+            Para <b>convertirte en FullStack developer</b> <b>debes dominar las dos áreas básicas</b>: <b>Backend</b> y <b>Frontend</b>. Esto <b>te ayudará a comprender cómo funciona cada uno de ellos</b>, y <b>también te ayudará a generar una comunicación entre ambas áreas.</b>
+            <br/>
+            - La <b>mayor</b> parte de la <b>interacción</b> entre estos <b>dos mundos</b> se <b>basa</b> en el <b>consumo</b> de <b>API</b>(s), y <b>comprender</b> cómo <b>consumir</b> una <b>API</b> desde el <b>Frontend</b>, te <b>ayudará</b> a <b>entender</b> a cómo <b>construir</b> una <b>API</b> desde el <b>Backend</b>.
+            <br/>
+        </p>
+        <p>
+            Además, <b>aprender</b> de las <b>diferentes formas</b> que <b>tenemos</b> de <b>subir</b> a <b>internet</b> una <b>aplicación web</b>, te <b>ayudará</b> a <b>entender</b> las <b>diferentes estrategias</b> de <b><i>deploy</i></b> que existen y te <b>permitirá</b> ampliar <b>tus conocimientos</b> en el <b>mundo</b> del <b>desarrollo web</b>.
+        </p>
+    </section>
+    <section>
+        <h3>Tecnologías Full Stack para desarrolladores</h3>
+        <p>
+            Aprender un stack conocido puede ayudarte a dar tus primeros pasos como desarrollador Full Stack, y a escalar un proyecto a producción de una manera más rápida y con una mayor interacción.
+            <br/>
+            Para eso necesitas estas herraminetas:
+            <ul>
+                <li>MERN :  MongoDB, ExpressJS, React, NodeJS</li>
+                <li>MEAN :  MongoDB, ExpressJS, AngularJS, NodeJS</li>
+                <li>LAMP :  Linux, Apache, MySQL, PHP</li>
+            </ul>
+            <div>
+                <p>Fuente: https://www.hostingplus.pe/blog/cuales-son-los-tipos-de-stacks-en-programacion/</p>
+                <p>Fuente (IMPORTANTE): https://dev.to/theme_selection/best-web-development-stack-2jpe</p>
+            </div>
+        </p>
+    </section>
+    <br/>
+    <section>
+        <article>
+            <h4>Imágenes</h4>
+            <ul>
+                <li>
+                    <p>Apuntes sobre ser <b>desarrollador Full Stack</b>:</p>
+                    <img src="https://static.platzi.com/media/user_upload/Fullstack-12ecb042-2e6b-47ea-a9a5-7269e670c905.jpg"/>
+                </li>
+                <br/>
+                <li>
+                    <br/>
+                    <img src="https://static.platzi.com/media/user_upload/Full%20Stack-cffe2af2-c983-4acb-909c-8627300632c1.jpg"/>
+                </li>
+                <li>
+                    <br/>
+                    <img src="https://i.pinimg.com/originals/89/2e/8b/892e8b39f44fa8fedd2be543dd3f5289.gif"/>
+                </li>
+                <br/>
+                <li>
+                    <br/>
+                    <img src="https://static.platzi.com/media/user_upload/FULL-STACK-DEV-GRAPH-2-0b343532-7342-4dca-938e-efe6af2ebc32.jpg"/>
+                </li>
+            </ul>
         </article>
     </section>
 </body>
