docs: added info and header section

--- a/6-html-web-anatomy.html
+++ b/6-html-web-anatomy.html
@@ -9,7 +9,18 @@
 <body>
     <header>
         <h1>HTML:</h1>
-        <p>HyperText Markup Language, por sus siglas, HTML. Significa que es un <b>lenguaje de marcado</b></p>
+        <p><b>HyperText Markup Language</b>, por sus siglas, <b>HTML</b>. Significa que es un <b>lenguaje de marcado de texto</b>.</p>
     </header>
+    <section>
+        <p>
+            La primera página web era una simple página blanca que tenía hipervínculos para poder conectarte a otras páginas, y eso es lo que básicamente significa HTML.
+            <br/>
+            Es la opción de saltar entre páginas o contenidos a través de hipervínculos que tenemos en HTML, que básicamente viene a ser una <b>etiqueta</b>.
+        </p>
+    </section>
+    <section>
+        <h2>Anatomía de una Página Web</h2>
+        <p></p>
+    </section>
 </body>
 </html>
