docs: images, anatomy section added

--- a/6-html-web-anatomy.html
+++ b/6-html-web-anatomy.html
@@ -20,7 +20,42 @@
     </section>
     <section>
         <h2>Anatomía de una Página Web</h2>
-        <p></p>
+        <img src="https://static.platzi.com/media/user_upload/Captura%20de%20pantalla%20%2817%29-f08bb2df-26d7-4221-aebc-c84dd0b015e1.jpg"/>
+        <p>
+            Esta imágen es solo un ejemplo, pero nos ayuda a entender que ciertas posiciones son fijas, como que la etique "< header > < /header >" va en la posición superior, o que la etiqueta "< footer > < /footer >" siempre irá en la posición inferior, como también hay otras etiquetas que nos ayudan a diferenciar la posición en la que nos encontramos.
+            <br/>
+            Pero gran parte de las páginas web tendrán una anatomía muy similiar a la mostrada.
+        </p>
+        <div>
+            <p>
+                <ul>Primer Contenedor Principal
+                    <li>
+                        <b>header:</b>
+                        Es el contenedor principal, que dentro llevará el logo o nombre de la empresa, una barra de navegación que por dentro tendrá un apartado de búsqueda para podernos mover dentro de la Aplicación/WebApp, ya sea estática o dinámica.
+                    </li>
+                    Segundo Contenedor Principal:
+                    <li>
+                        <b>main:</b>
+                        Información principal que se puede dividir por secciones.
+                        <br/>
+                        Ejemplo: División de posts, división de resúmenes de los artículos que podremos encontrar dentro de la página web.
+                    </li>
+                    <li>
+                        <b>sidebar/aside:</b>
+                        Contenedor principal con cierta información.
+                    </li>
+                    Tercer Contenedor Principal
+                    <li>
+                        <b>footer:</b>
+                        Los footers pueden tener diferentes tamaños, hay páginas que tienen footer con gran cantidad de información, como, contacto de redes sociales, dirección de lugar, menciones, etc; como también hay webs que tienen un footer muy pequeño, con unformación bien resumida, como podría ser un simple párrafo.
+                        <br/>
+                        - Hay <b>páginas</b> que su <b>footer no está en una posición habitual</b>, como las páginas con <b>scroll infinito</b>, páginas las cuales producen mucha información, de manera infinita, sin poder llegar a un límite.
+                        <br/>
+                        Ejemplos: Facebook, TikTok, Twitter, que producen información de manera infinita cuando haces scroll en su página principal, por ende, colocan su sección "< footer >" en alguna parte lateral de su pagina web, que podría estar <b>dentro</b> de la etiqueta "< aside >" o "< sidebar >".
+                    </li>
+                </ul>
+            </p>
+        </div>
     </section>
 </body>
 </html>
