docs: images section and summary section, added

--- a/6-html-web-anatomy.html
+++ b/6-html-web-anatomy.html
@@ -26,7 +26,7 @@
             <br/>
             Pero gran parte de las páginas web tendrán una anatomía muy similiar a la mostrada.
         </p>
-        <div>
+        <article>
             <p>
                 <ul>Primer Contenedor Principal
                     <li>
@@ -55,6 +55,58 @@
                     </li>
                 </ul>
             </p>
+        </article>
+        <br/>
+        <article>
+            <div>
+                <b>Resumen y datos extra:</b>
+                <p>
+                    <ul>
+                        <b>La web se conforma principalmente de tres conceptos:</b>
+                        <li>URL => Uniform Resource Locator.</li>
+                        <li>HTTP => Protocolo de transferencia de hipertexto.</li>
+                        <li>HTML => Estructura</li>
+                    </ul>
+                    <b>HTML</b> es el código que se utiliza para estructurar el contenido de tu web, y darle sentido y propósito.
+                    <br/>
+                    <b>HTML</b> son siglas, Hyper Text Markup Language (Lenguaje de Marcado de Hipertexto).
+                    <br/>
+                    <b>Hyper Text</b> significa que el texto tiene interactividad, conexión con otros documentos.
+                    <br/>
+                    <b>Markup</b> significa que le pone etiquetas a los elementos. Por eso también se le conoce como un lenguaje de etiquetas.
+                    <br/>
+                    <b>HTML</b> es un lenguaje interpretado.
+                    <br/>
+                    <b>HTML</b> es un estándar, así que no importa desde que navegador, que dispositivo se ejecute, es lo mismo en cualquier sitio. Sigue siendo el mismo código.
+                </p>
+            </div>
+        </article>
+    </section>
+    <br/>
+    <section>
+        <div>
+            <h3>Ejemplos:</h3>
+            <ul>
+                <li>
+                    <h4>GitHub.com</h4>
+                    <img src="https://static.platzi.com/media/user_upload/github-html-046a0f26-a6b1-4966-b188-d8de6b01366c.jpg"/>
+                </li>
+                <br/>
+                <li>
+                    <h4>github-footer</h4>
+                    <img src="https://static.platzi.com/media/user_upload/github-footer-html-4dabb565-45e0-41ef-808c-f87fe144785e.jpg"/>
+                </li>
+                <br/>
+                <li>
+                    <h4>Reuters.com</h4>
+                    <img src="https://static.platzi.com/media/user_upload/anatomia-html-a3b4a04a-859a-4793-9af3-be096b92a4a2.jpg"/>
+                </li>
+                <br/>
+                <li>
+                    <h4>reuters-footer</h4>
+                    <img src="https://static.platzi.com/media/user_upload/reuters-footer-html1-68b2d116-2359-441b-86c8-283998d3b356.jpg"/>
+                </li>
+            </ul>
         </div>
     </section>
 </body>
