docs: few lines updated

--- a/6-html-web-anatomy.html
+++ b/6-html-web-anatomy.html
@@ -38,15 +38,17 @@
                         <b>main:</b>
                         Información principal que se puede dividir por secciones.
                         <br/>
-                        Ejemplo: División de posts, división de resúmenes de los artículos que podremos encontrar dentro de la página web.
+                        Ejemplo: El feed o lista de publicaciones de una red social, división de posts, división de resúmenes de los artículos que podremos encontrar dentro de la página web.
                     </li>
                     <li>
                         <b>sidebar/aside:</b>
-                        Contenedor principal con cierta información.
+                        Contenido secundario de una página, que usualmente se encuentra a los lados del contenido principal (o main).
                     </li>
                     Tercer Contenedor Principal
                     <li>
                         <b>footer:</b>
+                        Esto se encuentra al fondo del sitio web.
+                        <br/>
                         Los footers pueden tener diferentes tamaños, hay páginas que tienen footer con gran cantidad de información, como, contacto de redes sociales, dirección de lugar, menciones, etc; como también hay webs que tienen un footer muy pequeño, con unformación bien resumida, como podría ser un simple párrafo.
                         <br/>
                         - Hay <b>páginas</b> que su <b>footer no está en una posición habitual</b>, como las páginas con <b>scroll infinito</b>, páginas las cuales producen mucha información, de manera infinita, sin poder llegar a un límite.
@@ -63,9 +65,12 @@
                 <p>
                     <ul>
                         <b>La web se conforma principalmente de tres conceptos:</b>
-                        <li>URL => Uniform Resource Locator.</li>
-                        <li>HTTP => Protocolo de transferencia de hipertexto.</li>
-                        <li>HTML => Estructura</li>
+                        <li>URL => Uniform Resource Locator. El identificador único del sitio en el navegador (por ejemplo: https://platzi.com).
+                        </li>
+                        <li>HTTP => Protocolo de transferencia de hipertexto. Es el estándar que se utiliza para enviar datos a través de paquetes entre el cliente y el servidor.
+                        </li>
+                        <li>HTML => es el código que se emplea para estructurar el contenido de tu web, y darle sentido y propósito.
+                        </li>
                     </ul>
                     <b>HTML</b> es el código que se utiliza para estructurar el contenido de tu web, y darle sentido y propósito.
                     <br/>
